# pydantic-fastapi-graphql

./: .dockerignore  .env  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/iris/: __init__.py  base.py  db.py  df.py  gql.py  mock.py  model.py
